Revert "fix several items not showing on screen"
This reverts commit 77e90cbf39bb23ba48c1c7d7fa3107f4bcb6d9c2.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,18 +2,12 @@
 
 html * {
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
-  width: 100%;
 }
 
 body {
   margin: 0 10px;
   padding: 0;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  position: fixed;
-  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
   background: rgb(160, 164, 255);
 }
 
